--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,11 @@
     background: red;
 }
 
+a { 
+    text-decoration: none;
+    color: rgb(17, 27, 33); /* #111b21; */
+}
+
 a.brand-logo {
     font-family: 'Merienda', cursive;
     font-size: 35px;
@@ -540,4 +545,24 @@ thead tr th {
         -ms-transform: skew(2deg) rotate(2deg) translateY(5px);
             transform: skew(2deg) rotate(2deg) translateY(5px);
     box-shadow: 0px 5px 5px 0 rgba(0,0,0,0.5);
+}
+
+.about {
+    font-size: 1.3em;
+    color: #5f5449;
+    /* color: #484538; */
+}
+
+.about>dl>dt {
+    padding-top: 30px;
+}
+
+.about dd {
+    padding-left: 20px;
+}
+
+.about dd ul>li {
+    list-style: circle;
+    /* padding-left: 10px; */
+    margin-left: 20px;
 }
