--- a/templates/base.html
+++ b/templates/base.html
@@ -70,8 +70,6 @@
             </div>
     
         </footer>
-
-        
     </div>
     
 
@@ -85,67 +83,6 @@
         crossorigin="anonymous">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-
-    <script type="text/javascript">
-        $(document).ready(function(){
-            $('.collapsible').collapsible();
-            $('select').material_select();
-            $('.button-collapse').sideNav();
-        });
-    </script>
-    <script>
-        
-        function flipBox(front, back){
-            var front = document.getElementById(front);
-            var back = document.getElementById(back);
-
-            var angle_front = rotate_degree(front);
-            // 
-            var angle_back = rotate_degree(back);
-            // 
-
-            if (angle_front == 0) {
-                front.style.transform = "perspective(1000px) rotateY(-180deg)";
-                back.style.transform = "perspective(1000px) rotateY(0deg)";
-            } else if (angle_front == 180) {
-                front.style.transform = "perspective(1000px) rotateY(0deg)";
-                back.style.transform = "perspective(1000px) rotateY(180deg)";
-            }
-        }
-        function rotate_degree(obj) {
-            var st = window.getComputedStyle(obj, null);
-            var matrix = st.getPropertyValue("transform");
-            // 
-            if(matrix !== 'none') {
-                var values = matrix.split('(')[1].split(')')[0].split(',');
-                var a = values[0];
-                var b = values[1];
-                var angle = Math.round(Math.atan2(b, a) * (180/Math.PI));
-            } else { var angle = 0; }
-            return (angle < 0) ? angle +=360 : angle;
-        } 
-    </script>
-    <script>
-        function toggleChevron(e) {
-            $(e.target)
-                .prev('.panel-heading')
-                .find("i.indicator")
-                .toggleClass('glyphicon-chevron-down glyphicon-chevron-up');
-        }
-        $('#accordion').on('hidden.bs.collapse', toggleChevron);
-        $('#accordion').on('shown.bs.collapse', toggleChevron);
-    </script>
-    <script>
-        $(document).ready(function() {
-            $('.panel-collapse').on('show.bs.collapse', function () {
-                $(this).siblings('.panel-heading').addClass('active');
-            });
-            $('.panel-collapse').on('hide.bs.collapse', function () {
-                $(this).siblings('.panel-heading').removeClass('active');
-            });
-        });
-    </script>
-    
-    
+    <script src="static/js/script.js"></script> 
 </body>
 </html>
