--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                         <li><a href="{{ url_for('get_food_items') }}">Food Items</a></li>
                         <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
                         <li><a href="{{ url_for('add_food_item') }}">New Item</a></li>
-                        <li><a href="{{ url_for('get_classification') }}">Food Classes</a></li>
+                        <li><a href="{{ url_for('get_classification') }}">Food Category</a></li>
                         <li><a href="{{ url_for('about') }}">About</a></li>
                         <li><a href="{{ url_for('contact') }}">Contact</a></li>
                     </ul>
@@ -39,7 +39,7 @@
                         <li><a href="{{ url_for('get_food_items') }}">Food Items</a></li>
                         <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
                         <li><a href="{{ url_for('add_food_item') }}">New Item</a></li>
-                        <li><a href="{{ url_for('get_classification') }}">Food Classes</a></li>
+                        <li><a href="{{ url_for('get_classification') }}">Food Category</a></li>
                         <li><a href="{{ url_for('about') }}">About</a></li>
                         <li><a href="{{ url_for('contact') }}">Contact</a></li>
                     </ul>
