--- a/templates/classification.html
+++ b/templates/classification.html
@@ -4,9 +4,9 @@
     <div class="row"> <!-- Heading for Accordion -->
         <div class="col-md-12">
             <div class="section-title text-center">
-                <h2>Food Classification</h2>
+                <h2>Food Categories</h2>
                 <span></span>
-                <p>The following is a list of food classifications in this data set.</p>
+                <p>The following is a list of food categories in this data set.</p>
             </div>
         </div>
     </div>
