--- a/templates/confirmdeleteclass.html
+++ b/templates/confirmdeleteclass.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h2 class="warning">Deleting Class: <strong>{{ classification.class }}</strong></h2>
+    <h2 class="warning">Deleting Category: <strong>{{ classification.class }}</strong></h2>
 
     <div class="row">
-        <p class="redwarning">If you proceed, this class will be <stong>DELETED PERMANENTLY</stong>.</p>
-        <p class="wayout">If you want to leave this class in the database, select <strong>Cancel</strong>.</p>
+        <p class="redwarning">If you proceed, this category will be <stong>DELETED PERMANENTLY</stong>.</p>
+        <p class="wayout">If you want to leave this category in the database, select <strong>Cancel</strong>.</p>
     </div>
 
     <div class="row">
