--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,7 +26,7 @@
                     <div class="dc-data-count"></div>
                 </div>
                 <div id="rowChart1">
-                    <h4>Food Classification</h4>
+                    <h4>Food Categories</h4>
                     <a class="reset" style="visibility: hidden;" href="javascript:classRowChart.filterAll(); dc.redrawAll();"><button class="btn btn-primary btn-sm">reset</button></a>
                     <span class="reset" style="visibility: hidden;">Range: <span class="filter"></span></span>
                     <a class="reset" href="javascript:classRowChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
@@ -410,7 +410,7 @@
                     // return "<button class='btn'><a href='#' data-target='#displayModal' data-toggle='modal' data="+d._id+" onclick='fill(this)'>"+d.name+"</a></button>"; }},
                     return "<a href='#' data-target='#displayModal' data-toggle='modal' data="+d._id+" onclick='fill(this)'><button class='btn'>"+d.name+"</button></a>"; }},
                 {label:'Brand', format: function(d) { return d.brand; }},
-                {label:'Type', format: function(d) { return d.classification; }}
+                {label:'Category', format: function(d) { return d.classification; }}
                 ]) 
             .sortBy(function(d) { return d.name; })
             .size(1000)
