--- a/templates/about.html
+++ b/templates/about.html
@@ -18,20 +18,20 @@
 
         <p>This app allows the user to fullfill the following tasks:</p>
         <dl>
-            <dt>Categorize the foods according to food classes. </dt>
-            <dd>The App allows the user to create, view, edit and delete classes. <br>
+            <dt>Categorize the foods according to food categories. </dt>
+            <dd>The App allows the user to create, view, edit and delete categories. <br>
                 <ul>
-                    <li>A class can only be <strong>deleted</strong> if it is not being used by any food item.</li>
-                    <li><strong>Editing</strong> a class will change the class name in all food items that are classified under that class.</li>
-                    <li>There is also the functionality to <strong>see</strong> all the classes. Here, there is also an indication of how many food items make use of each class.</li>
-                    <li>When <strong>adding</strong> a new class or <strong>editing</strong> an exisiting one, the app will check that that class name does not already exist.</li>
+                    <li>A category can only be <strong>deleted</strong> if it is not being used by any food item.</li>
+                    <li><strong>Editing</strong> a category will change the category name in all food items that are using it.</li>
+                    <li>There is also the functionality to <strong>see</strong> all the categories. Here, there is also an indication of how many food items make use of each category.</li>
+                    <li>When <strong>adding</strong> a new category or <strong>editing</strong> an exisiting one, the app will check that that category name does not already exist.</li>
                 </ul>   
-                <p>There are three places that will take the user to the page where one can add a new class. The app keeps track of the calling place and will return there on cancelling the process or creating a new class.
+                <p>There are three places that will take the user to the page where one can add a new category. The app keeps track of the calling page and will return there on cancelling the process or creating a new category.
                 </p>
             </dd>
             <dt> Food Items can be viewed, added, edited and deleted.</dt>
             <dd>
-                <p>Each food item will belong to a class. It is possible for the user to create a new food item. The form will have the classes prepopulated. The user will have to select one. There is the option to create a new class with checks on whether it already exists.</p> 
+                <p>Each food item will belong to a category. It is possible for the user to create a new food item. The form will have the categories prepopulated. The user will have to select one. There is the option to create a new category, a process that will check if it already exists.</p> 
                 <p>There are two ways of viewing the food items. </p>
                 <dl>
                     <dt>
@@ -44,11 +44,11 @@
                         </p>
                         <p>Apart from the button saying: "<em>More info and Controls at the back</em>", the curved arrow at the top right corner of the card is a visual indication pointing to the back of the card.</p>
                         <p>
-                        If the user clicks on the delete button, a confirmation window will open. The user can confirm or reject the deletion. If the user proceeds to delete an item, the count will be reduced for the class used by that item.
+                        If the user clicks on the delete button, a confirmation window will open. The user can confirm or reject the deletion. If the user proceeds to delete an item, the count will be reduced for the category used by that item.
                         If a user selects to edit the food item, a window will open which will be prepopulated with the information of that item. The user can do the changes necessary and then click the "<em>Update Food Item</em>" button. 
                         </p>
                         <p>
-                        If the user chooses to reclassify a food item, then the necessary changes to the quantities of the classes involved will be applied, (increase the new class, decrease the old class). The user can cancel the editing process and will be taken back to the accordion view.
+                        If the user chooses to recategories a food item, then the necessary changes to the quantities of the categories involved will be applied, (increase the new category, decrease the old one). The user can cancel the editing process and will be taken back to the accordion view.
                         </p>
                     </dd>
                     <dt>
@@ -57,13 +57,13 @@
                     </dt>
                     <dd>
                         <p>
-                        In the dashboard view, the user is able to filter the food items based on the class they belong to, as well as a number of parameter combinations.
+                        In the dashboard view, the user is able to filter the food items based on the category they belong to, as well as a number of parameter combinations.
                         At the bottom of the page there is a table which initially will show all products, currently up to 1000, but the number of food items shown will be reduced depending on the filters applied. 
                         </p>
                         <p> The name of the food item in the table is a button. Clicking a food item will open a modal which will display the data related to that food item.
                         </p>
                         <p>
-                        I experimented with styling the modal to make it appear as if it is a piece of paper on a desk. As soon as the user hovers over the modal, the paper changes as if pressure or weight has been applied to it. I tried to achieve an organic effect.
+                        I experimented with styling the modal to make it appear as if it is a piece of paper on a desk. As soon as the user hovers over the modal, the paper-like background changes as if pressure or weight has been applied to it. I tried to achieve an organic effect.
                         </p>
                         <p>
                         The user can close the modal in a number of ways.
