--- a/templates/addclass.html
+++ b/templates/addclass.html
@@ -4,7 +4,7 @@
     <div class="row"> 
         <div class="col-md-12">
             <div class="section-title text-center">
-                <h2>Add a Food Class</h2>
+                <h2>Add a Food Category</h2>
             </div>
         </div>
     </div>
@@ -14,16 +14,16 @@
     <div class="row">
         <form action="" method="" class="col s12 framed">
             <div class="row">
-                <p>These are the classes that already exist. If the class you want already exists, simply cancel to return to the previous page.</p>
+                <p>These are the categories that already exist. If the category you want already exists, simply cancel to return to the previous page.</p>
                 <div class="input-field col s12">
                     <i class="material-icons prefix">poll</i>
                     <select id="classification" name="classification_checking">
-                        <option value="" disabled selected>Choose a classification</option>
+                        <option value="" disabled selected>Choose a category</option>
                         {% for class in classification %}
                             <option value="{{ class.class }}">{{ class.class }}</option>
                         {% endfor %}
                     </select>
-                    <label>Classification </label>
+                    <label>Category </label>
                 </div>
             </div>
         </form>
