--- a/templates/editclass.html
+++ b/templates/editclass.html
@@ -4,9 +4,9 @@
     <div class="row"> <!-- Heading for Accordion -->
         <div class="col-md-12">
             <div class="section-title text-center">
-                <h2>Edit a Food Class</h2>
+                <h2>Edit a Food Category</h2>
                 <span></span>
-                <p>The following food class will be edited: <strong>{{ foodClass.class }}</strong></p>
+                <p>The following food category will be edited: <strong>{{ foodClass.class }}</strong></p>
 
                 <p>It is currently used by <strong>{{ foodClass.count }}</strong>
                     {% if foodClass.count == "1" %}
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col col-sm-12">
                 {% if entry %}
-                    <p class="warning">Class {{ entry }} already exist. Did you mean to add a different class?</p>
+                    <p class="warning">Category {{ entry }} already exists. Did you mean to add a different category?</p>
                 {% endif %}
             </div>
         </div>
@@ -36,11 +36,11 @@
                 <div class="input-field col s12">
                     <i class="material-icons prefix">assignment</i>
                     <input id="class_name" name="class" type="text" class="validate" value="{{ foodClass.class }}">
-                    <label for="class_name">Edit Class</label>
+                    <label for="class_name">Edit Category</label>
                 </div>
             </div>
             <div class="row">
-                <button class="btn waves-effect waves-light" type="submit" name="action">Edit Class
+                <button class="btn waves-effect waves-light" type="submit" name="action">Edit Category
                     <i class="material-icons right">playlist_add</i>
                 </button>
                 <a href="{{ url_for('get_classification') }}" class="btn waves-effect waves-light grey">
