--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
             rel="stylesheet" 
             integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
             crossorigin="anonymous" />
-    <link rel="stylesheet" href="./static/vendor/dc.css" />
+    <link rel="stylesheet" href="../static/vendor/dc.css" />
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
 </head>
 <body>
@@ -83,6 +83,6 @@
         crossorigin="anonymous">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script src="static/js/script.js"></script> 
+    <script src="../static/js/script.js"></script> 
 </body>
 </html>
