Added LinkedIn in footer.

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,7 @@
     <link rel="stylesheet" href="../static/vendor/dc.css" />
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
 </head>
-<body>
-    
+<body>    
     <div class="container">
         <header class="row header">
             <nav>
@@ -64,7 +63,8 @@
                             span[0].innerText = (new Date).getFullYear();</script>
                     </div>
                     <div class="col-sm-6 text-center">
-                            <a href="https://github.com/abonello/food_nutrition" target="_blank"><i class="fa fa-github"></i>This project is on GitHub</a>
+                            <a href="https://www.linkedin.com/in/anthonybonello/" target="_blank"><i class="fa fa-linkedin"></i> My LinkedIn</a><br>
+                            <a href="https://github.com/abonello/food_nutrition" target="_blank"><i class="fa fa-github"></i> This project is on GitHub</a>
                     </div>
                 </div>
             </div>
