Small adjustment to text in addfooditem.html

--- a/templates/addfooditem.html
+++ b/templates/addfooditem.html
@@ -115,7 +115,7 @@
                     <div class="input-field col s12">
                         <i class="material-icons prefix">assignment</i>
                         <input id="shop" name="shop" type="text" class="validate">
-                        <label for="shop">Shop item bought</label>
+                        <label for="shop">Shop item bought from</label>
                     </div>
                 </div>
 
