--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -80,9 +80,9 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="./static/vendor/d3.js"></script>
-    <script type="text/javascript" src="./static/vendor/crossfilter.js"></script>
-    <script type="text/javascript" src="./static/vendor/dc.js"></script>
+    <script type="text/javascript" src="../static/vendor/d3.js"></script>
+    <script type="text/javascript" src="../static/vendor/crossfilter.js"></script>
+    <script type="text/javascript" src="../static/vendor/dc.js"></script>
     <script>
         // Utility function
         function print_filter(filter) {
