Changed images for index page to reflect the change from Class to Category.

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
             <h3>Menus</h3>
             <p>Use the menus at the top to navigate around</p>
 
-            <img src="/static/images/menu.png" class="img-responsive" alt="add food item image">
+            <img src="/static/images/menu-all.png" class="img-responsive" alt="add food item image">
         </div>
 
         <div class="col col-sm-6 info">
