--- a/templates/addclass.html
+++ b/templates/addclass.html
@@ -42,14 +42,14 @@
                 <div class="input-field col s12">
                     <i class="material-icons prefix">assignment</i>
                     <input id="class_name" name="class" type="text" class="validate">
-                    <label for="class_name">New Class</label>
+                    <label for="class_name">New Category</label>
                 </div>
             </div>
            
 
 
             <div class="row">
-                <button class="btn waves-effect waves-light" type="submit" name="action">Add Class
+                <button class="btn waves-effect waves-light" type="submit" name="action">Add Category
                     <i class="material-icons right">playlist_add</i>
                 </button>
                 <a href="
