--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,7 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h2>Dashboard</h2>
+    <div class="row">
+        <!-- Heading for Accordion -->
+        <div class="col-md-12">
+            <div class="section-title text-center">
+                <h2>Dashboard</h2>
+                <span></span>
+                <p>Click and drag on scatter plots or click on the row chart to filter data.<br>
+                Click on buttons in table to see details of food item.</p>
+                <hr>
+            </div>
+        </div>
+    </div>
+
+
 
     <div class="modal" id="displayModal" tabindex="-1">
         <div class="modal-dialog">
